--- a/app/src/main/res/layout/activity_youtube_layout.xml
+++ b/app/src/main/res/layout/activity_youtube_layout.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".projects.youtubeLayout.YoutubeLayout">
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:menu="@menu/youtube_bottom_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
