--- a/app/src/main/res/menu/youtube_bottom_menu.xml
+++ b/app/src/main/res/menu/youtube_bottom_menu.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/youtube_home"
+        android:icon="@drawable/home_icon"
         android:title="Home" />
     <item
         android:id="@+id/youtube_dashboard"
+        android:icon="@drawable/dashboard_icon"
         android:title="Dashboard" />
     <item
         android:id="@+id/youtube_notifications"
+        android:icon="@drawable/notifications_icon"
         android:title="Notifications" />
 </menu>
